--- a/style.css
+++ b/style.css
@@ -37,6 +37,36 @@ img {
   gap: 1rem;
   text-align: center;
 }
+
+@media (max-width: 1200px) {
+  #pokemons-container {
+    grid-template-columns: repeat(4, 1fr);
+    width: 80%;
+  }
+}
+
+@media (max-width: 992px) {
+  #pokemons-container {
+    grid-template-columns: repeat(3, 1fr);
+    width: 93%;
+  }
+  .logo {
+    width: 70%;
+  }
+}
+
+@media (max-width: 768px) {
+  #pokemons-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 576px) {
+  #pokemons-container {
+    grid-template-columns: 1fr;
+  }
+}
+
 .pokemon-card {
   border: 1px solid;
   border-radius: 1rem;
